allow role management (closes #572)